--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,12 +25,12 @@
   }
 
   .font-special-elite {
-    font-family: var(--font-special-elite), Arial, Helvetica, sans-serif;
+    font-family: var(--font-special-elite), Arial, sans-serif;
   }
 }
 
 body {
   background: var(--bg);
   color: var(--fg);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-suit), Arial, sans-serif;
 }
