--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,17 +5,20 @@
   --bg: #ffffff;
   --fg: #171717;
   --hero-bg: url('/images/paper-texture-light.jpg');
+  --surface: #f8f8f8;
 }
 
 [data-theme='dark'] {
   --bg: #171717;
   --fg: #ffffff;
   --hero-bg: url('/images/paper-texture-dark.jpg');
+  --surface: #2b2b2b;
 }
 
 @theme {
   --color-bg: var(--bg);
   --color-fg: var(--fg);
+  --color-surface: var(--surface);
   --color-primary: #ffad96;
 }
 
